k8s/test-nfs.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-nfs-pod
spec:
  containers:
    - name: ibot
      image: 10.29.158.34:80/ibot/mysql:5.7.24
      command:
        - sh
        - -c
        - 'echo hello world > /mnt/hello'
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: "/mnt"
          name: nfs
  volumes:
    - name: nfs
      nfs: # 使用NFS存储
        path: /nfs # NFS存储路径
        server: 10.29.158.34 # NFS服务器地址
