k8s/extends-service.yml
# 映射外部MySQL服务
apiVersion: v1
kind: Service
metadata:
  name: ibot-mysql-service
spec:
  ports:
    - protocol: TCP
      port: 3306 
      targetPort: 3306 
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ibot-mysql-service
subsets:
  - addresses:
      - ip: 10.29.158.34
    ports:
      - port: 3306
---
# 映射外部Redis服务
apiVersion: v1
kind: Service
metadata:
  name: ibot-redis-service
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ibot-redis-service
subsets:
  - addresses:
      - ip: 10.29.158.34
    ports:
      - port: 6380
---
# 映射外部logstash服务
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
spec:
  ports:
    - protocol: TCP
      port: 4560
      targetPort: 4560
---
apiVersion: v1
kind: Endpoints
metadata:
  name: logstash-service
subsets:
  - addresses:
      - ip: 10.29.158.34
    ports:
      - port: 4560
---
# 映射外部elasticsearch服务
apiVersion: v1
kind: Service
metadata:
  name: ibot-es-service
spec:
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ibot-es-service
subsets:
  - addresses:
      - ip: 10.29.158.34
    ports:
      - port: 9200
---
# 映射外部neo4j服务
apiVersion: v1
kind: Service
metadata:
  name: ibot-neo4j-service
spec:
  ports:
    - protocol: TCP
      port: 8474
      targetPort: 8474
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ibot-neo4j-service
subsets:
  - addresses:
      - ip: 10.28.152.182
    ports:
      - port: 8474
