k8s/ibot-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: ibot-gateway-service
spec:
  ports:
    - port: 8301
      targetPort: 8301
      nodePort: 31003
  selector:
    name: ibot-gateway
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibot-gateway-d
spec:
  selector:
    matchLabels:
      name: ibot-gateway
  replicas: 1 # 2实例集群
  template:
    metadata:
      labels:
        name: ibot-gateway
    spec:
      containers:
        - name: ibot-gateway
          image: 10.29.158.34:80/ibot/ibot-gateway:v2.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8301
#          args:
#            - "--ibot-register=10.101.13.30"
#            - "--spring.profiles.active=prod"
          env: # 从configmap加载配置到环境变量
            - name: logstash.url
              valueFrom:
                configMapKeyRef:
                  name: ibot-cm
                  key: logstash.url
            - name: ibot-register
              valueFrom:
                configMapKeyRef:
                  name: ibot-cm
                  key: ibot.register.url
            - name: TZ
              value: "Asia/Shanghai"
          volumeMounts:
            - mountPath: /home/k8sops/ibot/log
              name: ibot-gateway-data
          # 虚拟机资源有限，对资源进行限制
          resources:
            requests:
              cpu: 0.5
              memory: 300Mi
            limits:
              cpu: 1
              memory: 500Mi
      volumes: # 日志挂载到NFS服务器
        - name: ibot-gateway-data
          nfs:
            path: /nfs/log
            server: 10.29.158.34
