k8s/ibot-register.yml
apiVersion: v1
kind: Service
metadata:
  name: ibot-register-service
spec:
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 31001
  selector:
    name: ibot-register
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibot-register-d
spec:
  selector:
    matchLabels:
      name: ibot-register
  replicas: 1 # 2实例集群
  template:
    metadata:
      labels:
        name: ibot-register
    spec:
      containers:
        - name: ibot-register
          image: 10.29.158.34:80/ibot/ibot-register:v2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
#            - "--spring.profiles.active=prod"
          env: # 从configmap加载配置到环境变量
            - name: logstash.url
              valueFrom:
                configMapKeyRef:
                  name: ibot-cm
                  key: logstash.url
            - name: TZ
              value: "Asia/Shanghai"
          volumeMounts:
            - mountPath: /home/k8sops/ibot/log
              name: ibot-register-data
          # 虚拟机资源有限，对资源进行限制
          resources:
            requests:
              cpu: 0.5
              memory: 300Mi
            limits:
              cpu: 1
              memory: 500Mi
      volumes: # 日志挂载到NFS服务器
        - name: ibot-register-data
          nfs:
            path: /nfs/log
            server: 10.29.158.34
